# Organyze-Bullet

./: .firebaserc  .gitignore  .replit  README.md  bot.py  bulletentry.py  dataModels_test.dart  discordCommands.py  index.html  pubspec.yaml  pyproject.toml  readme.md  testList.py  testReminder.py
.firebase/: hosting..cache
android/app/: build.gradle  google-services.json
discord/: bot.py  bulletentry.py  notification.py
gw8885/: README.md  pubspec.yaml  pubspec.yaml.bak  pubspec.yaml.bak.bak
gw8885/lib/: main.dart
gw8885/lib/database/: auth.dart
gw8885/lib/screens/: add-entry.dart  create-new-account.dart  (+3 more)
gw8885/test/: widget_test.dart  widget_test.dart.bak.bak  widget_test.dart.bak.bak.bak
gw8885/web/: index.html
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main.dart.bak
lib/database/: Publishers.dart  auth.dart  dataModel.dart  dataModels.dart  message_dao.dart  notebookListPublisher.dart  realtime_database_function.dart  userModel.dart
lib/screens/: add-entry.dart  add-notebook.dart  add-search.dart  create-new-account.dart  create-new-account.dart.bak  eg-entry.dart  login-screen.dart  login-screen.dart.bak  screens.dart  settings-screen.dart  share-notebook.dart  update-entry.dart  update-notebook.dart  view_entries.dart  view_notebooks.dart  view_search.dart
lib/widgets/: background-image.dart  notebook-card.dart  password-input.dart  rounded-button.dart  text-field-input.dart
my_app/: pubspec.yaml
test/: test_bulletentry.py  widget_test.dart  widget_test.dart.bak
web/: index.html
(+9 files in other folders)
