[tool.poetry]
name = "organyze-bullet"
version = "0.0.1"
description = ""
authors = ["teamvista <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.6.0"
nextcord = "^2.0.0a3"
python-dateutil = "^2.8.2"
Authlib = "^0.15.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
